# low-quality-dogs

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  README.md  dockerfile  main.py  pyproject.toml
backend/app/: config.py  utils.py
backend/app/api/: auth.py  dogs.py  health.py
backend/app/db/: db.py  queries.py
backend/app/models/: models.py  schema.sql
backend/scripts/: build.sh  run.sh  test.sh
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
backend/tests/utils/: auth.py  utils.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  dogs.ts
frontend/src/components/: DeleteConfirmModal.tsx  DisplayUsersModal.tsx  DogCard.tsx  EditDogModal.tsx  Navbar.tsx  UploadDogModal.tsx  UserCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDogs.ts  useUsers.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/styles/: DogCard.css  Navbar.css  UserCard.css  components.css  globals.css  pages.css
frontend/src/types/: models.ts
